# ena-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_PROMPT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli_usage.md  migration_guide.md  performance_strategy.md  r_to_python_api_map.md  release_checklist.md  rena-upstream-issues.md  testing_strategy.md
docs/porting-notes/: 000_template_start.md  001_accumulation_conversation_windows.md  002_model_rotation_node_parity.md  003_plot_web_rotation_mvp.md
examples/: cli_sample.csv  fastapi_service.py  minimal_pyena_workflow.py
examples/pyodide/: README.md  index.html
reference/: README.md  rENA_manifest.json
reference/rENA/man/: ENAplot.Rd  add_group.Rd  add_nodes.Rd  add_points.Rd  add_trajectory.Rd  compute_SB.Rd  directed_node_positions.Rd  ena.rotate.by.hena.regression.Rd  ena.rotate.by.hena.regression_2.Rd  ena.rotate.by.mean.Rd  fun_sphere_norm.Rd  get_x1_main_effect.Rd  gmr.Rd  group.Rd  move_nodes_to_unit_circle.Rd  prepare_trajectory_data.Rd  project.Rd  reclassify.Rd  rotate.Rd  scale.ENAplot.Rd  sphere_norm.Rd  times-.ena.matrix.Rd  with_trajectory.Rd
scripts/: benchmark_accumulation.py  generate_r_oracle.py  summarize_r_api.py  validate_cli_release.py
src/ena_python/: __init__.py  accumulation.py  api.py  cli.py  exceptions.py  io.py  matrix.py  modeling.py  models.py  normalize.py  plotting.py  rotation.py  stats.py
src/ena_python/compat/: __init__.py  r_bridge.py
src/ena_python/web/: __init__.py  api.py
src/pyena/: __init__.py  accumulation.py  api.py  cli.py  io.py  matrix.py  modeling.py  plotting.py  rotation.py  stats.py  types.py
src/pyena/compat/: r_bridge.py
src/pyena/web/: __init__.py  api.py
tests/: test_accumulation_smoke.py  test_benchmarks.py  test_cli.py  test_matrix.py  test_normalize.py  test_plotting_web.py  test_r_oracle_parity.py  test_rcompat_fixture_generation.py  test_stats_and_rotations.py
