[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ena-python"
version = "0.1.0"
description = "Python implementation of Epistemic Network Analysis, ported from the R package rENA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "HU Dongpin", email = "hudongpin@126.com" }
]
keywords = ["ENA", "epistemic-network-analysis", "quantitative-ethnography", "network-analysis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
# Keep this list minimal: pyENA is intended to run under Pyodide/browser Python,
# where every extra wheel is a download and some (e.g. scikit-learn) may be
# unavailable. Anything optional belongs in an extra below.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
]

[project.scripts]
pyena = "ena_python.cli:main"

[project.optional-dependencies]
plot = ["plotly>=5.20"]
web = ["fastapi>=0.110", "httpx>=0.27", "uvicorn[standard]>=0.29", "pydantic>=2.7"]
# `ena_python.io.read_table` dispatches .parquet to pandas, which needs an engine.
parquet = ["pyarrow>=15.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]
dev = [
  "build>=1.2",
  "pandas-stubs>=2.1",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit>=3.7",
]
all = [
  "ena-python[plot,web,parquet,docs,dev]"
]

[project.urls]
Homepage = "https://github.com/HUDongpin/ena-python"
Repository = "https://github.com/HUDongpin/ena-python"
Issues = "https://github.com/HUDongpin/ena-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ena_python"]

[tool.hatch.build.targets.sdist]
# NOTE: `.gitignore` un-ignores reference/rENA/man/ so git tracks it, and hatchling
# treats that negation as a force-include. Those ~53 .Rd files (rENA's API docs, GPL-3,
# attributed in reference/README.md) therefore ship in the sdist regardless of what is
# listed here -- excluding "/reference" below would be a no-op, so it is not listed.
exclude = [
  "/.claude",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/build",
  "/data/local",
  "/dist",
  "/rENA-main",
  "/rENA-main.zip",
  "/pyENA-*-internal-alpha",
  "/pyENA-*-internal-alpha.zip",
  "*_Technical Review.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "rcompat: requires R and the rENA reference package",
  "benchmark: performance benchmarks",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]
# Vendored rENA sources are reference material, not pyENA code. docs/testing_strategy.md
# tells contributors to unpack them into the working tree, and rENA ships stray Python
# prototypes under demo/backup/ that would otherwise fail `ruff check .`.
extend-exclude = ["rENA-main", "reference", "dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
# Intentionally not pinning `python_version`: mypy then checks against whichever
# interpreter runs it, and CI spans 3.10-3.13, so each job checks its own version.
# Pinning 3.10 also made mypy parse *dependency* stubs under 3.10 syntax rules, and
# numpy >= 2.2 ships stubs using PEP 695 `type` aliases that only parse as 3.12+ --
# which failed the run before any pyENA code was checked.
packages = ["ena_python"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["ena_python"]

[tool.coverage.report]
show_missing = true
skip_covered = true
